--- a/basket.html
+++ b/basket.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+    <div id="nothingInBasket">
+
+    </div>
     <div id="container">
         <!-- <div id="yourbasket">
             <h1>Your Basket</h1>
@@ -74,7 +77,25 @@
     </div>
 
     <div id="containerAfterProductDetail">
-        
+        <div id="emptyBasketButton">
+
+        </div>
+        <!-- <div id="checkoutDiv">
+            <div id="checkoutDiv1">
+                <div id="subtotalAndTotal">
+                    <div id="checkoutSubtotal">
+                        <div id="checkoutSubtotalAndDeliveryText"></div>
+                        <div id="checkoutSubtotalValue"></div>
+                    </div>
+                    <div id="checkoutTotal"></div>
+                </div>
+                <div id="savediv"></div>
+            </div> -->
+            <!-- <div id="checkoutDiv2"></div> -->
+            <!-- <div id="checkoutDiv3">
+
+            </div>
+        </div> -->
     </div>
 
 
