update for lower js div part

--- a/basket.html
+++ b/basket.html
@@ -76,7 +76,7 @@
 
     </div>
 
-    <div id="containerAfterProductDetail">
+    <!-- <div id="containerAfterProductDetail"> -->
         <div id="emptyBasketButton">
 
         </div>
@@ -96,7 +96,7 @@
 
             </div>
         </div> -->
-    </div>
+    <!-- </div> -->
 
 
 </body>
