checkout layout done

--- a/basket.html
+++ b/basket.html
@@ -77,9 +77,9 @@
     </div>
 
     <!-- <div id="containerAfterProductDetail"> -->
-        <div id="emptyBasketButton">
+        <!-- <div id="emptyBasketButton">
 
-        </div>
+        </div> -->
         <!-- <div id="checkoutDiv">
             <div id="checkoutDiv1">
                 <div id="subtotalAndTotal">
@@ -97,7 +97,6 @@
             </div>
         </div> -->
     <!-- </div> -->
-
 
 </body>
 
